# Network_Automation

./: README.md  Vlan_Configuration.py  basic_configuration.py  csv_writer.py  device_details.csv  pyproject.toml
Netmiko/Basic_Device_Details/: Backup_Running_Configuration.py
Netmiko_Configuration/Basic_Device_Details/: ACL_Configuration.py  Backup  Backup_Running_Configuration.py  Checking_Device_Uptime.py  Create_Vlan.py  DHCP_Pool_Configuration.py  Device_CPU_History.py  EIGRP_Configuration.py  Interface_Details.py  Interface_Status_Check.py  Jump_Host.py  Jump_Host_2.py  Jump_Host_3.py  Jump_Host_4.py  Jump_Host_5.py  Jump_Host_6.py  Loopback_Interface_Configuration.py  Looping_Through_Multiple_Devices.py  Multiple_Commands.py  NTP_Configuration.py  Sending_Configuration_Commands.py  Show_Running_Configuration.py  test.py
Netmiko_Configuration/Basic_Device_Details/utils/: Common_Methods.py  Exception_Handler.py
Netmiko_Configuration/Routing_Configuration/: Advance_Script_1.py  Advance_Script_2.py  Backup 192.168.1.120 2024-10-23 11-59-45.txt  Backup 192.168.1.125 2024-10-23 12-05-09.txt  Device192.168.1.100.txt  Device192.168.1.105.txt  Device192.168.1.110.txt  Vlan_Configuration.py  basic_config.py  basic_configuration.py  command_Execution_ouput.txt  device_details.csv  report.txt
Netmiko_Configuration/Routing_Configuration/assets/: __init__.py  text_file.py  text_style.py
Routing_Configuration/: device_details.csv
assets/: text_style.py
components/: common_function.py
utils/: Exception_Handler.py
(+5 files in other folders)
